# kkWIXTest

./: CMakeLists.txt  README.md  build_windows.bat
package/: extra.wxs  patch.xml
test_product/: CMakeLists.txt  test_product.cpp
test_tool/: CMakeLists.txt  test_tool.cpp
